Margin fix on mobile width

--- a/imports/ui/components/spendingPerTimePage/spendingPerTimePage.less
+++ b/imports/ui/components/spendingPerTimePage/spendingPerTimePage.less
@@ -1,6 +1,6 @@
 
 @media (max-width: 425px) {
     .activity-sec {
-        padding: 40px 0px;
+        padding: 40px 10px;
     }
 }
